--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "asciinema-player": "^3.14.0",
     "tailwindcss": "^4.1.18"
   }
 }
